--- a/readme.org
+++ b/readme.org
@@ -2,8 +2,9 @@
 #+date: <2018-10-25 Thu>
 # readme.org
 
-* leaf.el
+* [WIP]leaf.el
 [[https://travis-ci.org/conao3/leaf.el][https://img.shields.io/travis/conao3/leaf.el/master.svg?style=flat-square]]
 
 ** What is it?
 ~leaf.el~ support your setting init.el.
+
