add table of contests

--- a/Readme.org
+++ b/Readme.org
@@ -16,6 +16,7 @@
   - [[Configuration keywords]]
     - [[:init keyword]]
     - [[:mode, :interpreter keyword]]
+    - [[:magic :magic-fallback keyword]]
     - [[:bind, :bind* keyword]]
     - [[:pre-setq :setq keyword]]
     - [[:setq-default :custom keyword]]
