--- a/Readme.org
+++ b/Readme.org
@@ -15,6 +15,7 @@
     - [[:ensure keyword]]
   - [[Configuration keywords]]
     - [[:init keyword]]
+    - [[:commands keywards]]
     - [[:hook keyword]]
     - [[:mode, :interpreter keyword]]
     - [[:magic :magic-fallback keyword]]
@@ -175,6 +176,29 @@ completed before using ~:ensure~ keyword.
         (progn
           (require 'foo)))))
 #+end_src
+
+*** :commands keywards
+~:commands~ keyword define additional autoload commands.
+
+#+BEGIN_SRC emacs-lisp
+  (cort-deftest leaf-test/:simple-commands
+    (match-expansion
+     (leaf ace-jump-mode
+       :commands ace-jump-mode)
+     '(progn
+        (add-hook #'ace-jump-mode "ace-jump-mode" nil t)
+        (require 'ace-jump-mode))))
+
+  (cort-deftest leaf-test/:simple-multi-commands
+    (match-expansion
+     (leaf ace-jump-mode
+       :commands ace-jump-mode command1 command2)
+     '(progn
+        (add-hook #'ace-jump-mode "ace-jump-mode" nil t)
+        (add-hook #'command1 "ace-jump-mode" nil t)
+        (add-hook #'command2 "ace-jump-mode" nil t)
+        (require 'ace-jump-mode))))
+#+END_SRC
 
 *** :hook keyword
 ~:hook~ keyword define ~add-hook~.
